cabal-version:      3.0
name:               blogrb-core
version:            0.1.0.0
license:            NONE
synopsis:           blog/reblog's core site generator module
description:
    Blogs on blog/reblog are written in Markdown with some associated metadata
    either in the files themselves, with `blogrb` or the VCS integration, or
    in an associated database, as on the hosted version. This library does the
    conversion of metadata + Markdown into rendererd HTML, plus some common
    convenience functions that library users will probably want.
homepage:           https://github.com/nic-hartley/blog-reblog
license:            NONE
author:             Nic Hartley
maintainer:         the@redfennec.dev
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common options
    ghc-options: -Wall
    default-language: Haskell2010
    default-extensions:
        DuplicateRecordFields,
        NamedFieldPuns,
        RecordWildCards,
        OverloadedRecordDot,
        ScopedTypeVariables,

library
    import:           options
    exposed-modules:
        BlogReblog.Core,
        BlogReblog.Core.Metadata,
    build-depends:
        base,
        cryptonite,
        time,
        uuid-types,
        memory,
        bytestring,
    hs-source-dirs:   src
